fix: overflow-y and overflow-x css problem to write tistory

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,22 +1,59 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+html,
+body,
+#root {
+  height: 100%;
+}
 .App {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
+}
+nav {
+  width: 100%;
+  height: 50px;
+  background-color: #333333;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.content {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  max-height: calc(100% - 50px);
+}
+.sideBarWrapper {
+  width: 250px;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow-y: auto;
+}
+.tooltip {
+  padding-right: 40px;
 }
 .sideBar {
-  width: 300px;
-  height: 100%;
+  width: 100%;
   background-color: #999999;
   display: flex;
-  position: fixed;
-  left: 0;
+  flex-direction: column;
+  align-items: center;
 }
 .menu {
   width: 200px;
-  height: 60px;
+  min-height: 60px;
   background-color: #fff;
   border: 1px solid #333;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 30px 0;
+  position: relative;
 }
